force-app/main/default/objects/Client_News__c/Client_News__c.object-meta.xml
<CustomObject>
    <label>Client News</label>
    <nameField>
        <label>Client News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>