force-app/main/default/objects/Client_News__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Newss</relationshipLabel>
    <relationshipName>Client_Newss</relationshipName>
    <type>Lookup</type>
</CustomField>