force-app/main/default/objects/Client_News__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Client Newss</relationshipLabel>
    <relationshipName>Client_Newss</relationshipName>
    <type>Lookup</type>
</CustomField>