force-app/main/default/objects/Client_News__c/fields/New_Client__c.field-meta.xml
<CustomField>
    <fullName>New_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Client</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Client News</relationshipLabel>
    <relationshipName>Client_Newss</relationshipName>
    <type>Lookup</type>
</CustomField>